--- a/style.css
+++ b/style.css
@@ -1,12 +1,12 @@
 :root {
   --pink: #f14e95;
   --bg: #1a1a1a;
-  --shadow: 0 2px 2px rgb(0 0 0 /0.5);
+  --shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 body {
   font-size: 1.2rem;
   font-family: "Work Sans", sans-serif;
-  min-height: 2000px;
+  min-height: 4000px;
 }
 .hero::before {
   content: "";
@@ -27,13 +27,14 @@ body {
   background-color: rgba(0, 0, 0, 0.3);
 }
 .hero h1,
-h4,
-p {
+.hero h4,
+.hero p {
   text-shadow: var(--shadow);
 }
 .hero h1 {
-  font-family: "Sacramento", sans-serif;
+  font-family: "Sacramento", cursive;
   font-size: 3.6rem;
+  font-weight: bold;
 }
 .hero p {
   font-size: 1.4rem;
@@ -44,6 +45,7 @@ p {
 .hero a {
   color: var(--pink);
   background-color: white;
+  margin-top: 20px;
   box-shadow: var(--shadow);
 }
 .hero a:hover {
@@ -72,7 +74,117 @@ p {
 .simply-countdown p {
   margin-top: 10px;
   text-align: center;
-  font-size: 1.6rem;
+  font-size: 1.3rem;
+}
+
+.my-navbar {
+  background-color: rgba(255, 255, 255, 0.2);
+  backdrop-filter: blur(4px);
+}
+
+.my-navbar .offcanvas {
+  height: 100vh;
+}
+
+.my-navbar .navbar-brand,
+.my-navbar .offcanvas-title {
+  font-family: "Sacramento", cursive;
+  font-size: 3.2rem;
+  font-weight: bold;
+}
+
+.my-navbar .nav-link {
+  text-transform: uppercase;
+}
+
+.home {
+  background: url(/imgs/frolar.png);
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  min-height: 100vh;
+  margin-top: -4rem;
+  padding-top: 8rem;
+}
+
+.home h2 {
+  color: var(--pink);
+  font-family: 'Sacramento';
+  font-size: 5rem;
+  font-weight: bold;
+}
+
+.home h3 {
+  color: #444444;
+  font-size: 1.5rem;
+  margin-bottom: 1rem;
+}
+
+.home p {
+  font-size: 1.1rem;
+  color: #666666;
+}
+
+.home .couple {
+  margin-top: 20px;
+  padding-bottom: 20px;
+}
+.home .couple h3 {
+  font-family: 'Scaramento';
+  font-size: 2.4rem;
+  color: var(--pink);
+}
+
+.home .couple img {
+  width: 100%;
+  margin-top: 70px;
+}
+
+.info {
+  background-color: var(--bg);
+  color: white;
+  padding-top: 10rem;
+  padding-bottom: 5rem;
+  min-height: 100vh;
+}
+
+.info h2 {
+  color: var(--pink);
+  font-family: 'Sacramento';
+  font-size: 5rem;
+  font-weight: bold;
+}
+
+.info .alamat {
+  font-size: 1.1rem;
+}
+
+.info .description {
+  font-size: 1rem;
+  font-weight: 300;
+}
+
+.info .card {
+  background-color: rgba(255, 255, 255, 0.2)!important;
+  color: white !important;
+  border: 1px solid rgb(170, 170, 170);
+  margin: 10px;
+}
+
+.info .card-header {
+  border-bottom: 1px solid rgb(170, 170, 170);
+  text-transform: uppercase;
+  letter-spacing: 0.1rem;
+}
+
+.info .card-body {
+  font-size: 1rem;
+}
+
+.info .card-footer {
+  border-top: 1px solid rgb(170, 170, 170);
+  font-size: 0.9rem;
+  font-weight: 300;
 }
 
 /* media query */
@@ -80,7 +192,7 @@ p {
 /* laptop */
 @media (max-width: 992) {
   htnl {
-    font-size: 75%;
+    font-size: 70%;
   }
   .simply-countdown {
     padding: 60px;
@@ -95,6 +207,10 @@ p {
   .simply-countdown{
     padding: 50px;
     margin: 5px;
+  }
+  .my-navbar .nav-link {
+    font-size: 1.4rem;
+    text-align: left;
   }
 }
 
